Crawler Website and Produce Kafka

--- a/html/index.html
+++ b/html/index.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="image/20231223_210753.png" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API Downloader & Searcher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- Elemen Audio -->
-    <audio autoplay>
-      <source src="audio/smack_that.mp3" type="audio/mp3" />
-    </audio>
-    <!-- Background Animation -->
-    <div class="bgAnimation" id="bgAnimation">
-      <div class="backgroundAmim"></div>
-    </div>
-    <div class="container">
-      <!-- Navbar -->
-      <nav>
-        <h1><span>MFR</span>.py</h1>
-        <ul>
-          <li>Home Page</li>
-        </ul>
-      </nav>
-      <section>
-        <div class="textBox">
-          <h1><span>API</span> Downloader & Searcher</h1>
-          <p>
-            This is the home page of a project to crawl several websites!
-            <br />Among the websites that I crawl are news, book and film
-            websites Hehe
-          </p>
-          <a href="http://127.0.0.1:8003">
-            <button class="homeBtn" style="--i: #fff">News</button>
-          </a>
-          <a href="http://0.0.0.0:8001">
-            <button class="homeBtn" style="--i: #00bfff">Books</button>
-          </a>
-          <a href="http://127.0.0.1:8002">
-            <button class="homeBtn" style="--i: #fff">Movies</button>
-          </a>
-        </div>
-      </section>
-    </div>
-    <script src="./script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="image/20231223_210753.png" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>API Downloader & Searcher</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- Elemen Audio -->
+  <audio autoplay>
+    <source src="audio/smack_that.mp3" type="audio/mp3" />
+  </audio>
+  <!-- Background Animation -->
+  <div class="bgAnimation" id="bgAnimation">
+    <div class="backgroundAmim"></div>
+  </div>
+  <div class="container">
+    <!-- Navbar -->
+    <nav>
+      <h1><span>MFR</span>.py</h1>
+      <ul>
+        <li>Home Page</li>
+      </ul>
+    </nav>
+    <section>
+      <div class="textBox">
+        <h1><span>API</span> Downloader & Searcher</h1>
+        <p>
+          This is the home page of a project to crawl several websites!
+          <br />Among the websites that I crawl are news, book and film
+          websites Hehe
+        </p>
+        <a href="http://127.0.0.1:8003">
+          <button class="homeBtn" style="--i: #fff">News</button>
+        </a>
+        <a href="http://0.0.0.0:8001">
+          <button class="homeBtn" style="--i: #00bfff">Books</button>
+        </a>
+        <a href="http://127.0.0.1:8002">
+          <button class="homeBtn" style="--i: #fff">Movies</button>
+        </a>
+        <a href="http://192.168.57.9:8004">
+          <button class="homeBtn" style="--i: #00bfff">Social Media</button>
+        </a>
+      </div>
+    </section>
+  </div>
+  <script src="./script.js"></script>
+</body>
+
 </html>
